/* $Id$ */

/**
 *  @file
 *  Changelog for Embedded Media Field (Drupal version 6).
 */

by aaron: Change legacy module_invoke to directly call internal funciton.
#604524 by aaron | DamienMcKenna : Create new hook_emfield_data_alter(&$data).
by aaron: Fix error/WSOD on admin screen if FLV Media Player module installed,
  but no profiles have been created.

================
 DRUPAL-6--1-11
================

by aaron: Add generic theme for swfobject when that module not included.
#592284 by aaron: Fix botched update for provider data import.

===============
 DRUPAL-6--1-8
===============

by aaron: Add 'provider' views handlers.
by aaron: Upgrade existing fields to retrieve new data when necessary.
by aaron: Store version data in new column.

===============
 DRUPAL-6--1-7
===============

by aaron: Add support for flv media player profiles.

===============
 DRUPAL-6--1-5
===============

September 2009
--------------
by aaron: Sanitize only before preview.
by aaron: Clean up extra columns invocation.
by aaron: Allow providers to validate URLs.
#264264 by aaron: Sanitize item for preview.

August 2009
-----------
by aaron: Add option for thumbnail play button overlay.
by aaron: Implement hook_content_generate for Devel module.

===============
 DRUPAL-6--1-4
===============

August 2009
-----------
#370882 by jdwfly | aaron: Fix menu creation.
#358241 by joachim: Field help text links 'Custom URL' to site itself.

DRUPAL-6--1-3
=============

July 2009
---------
 * #165731 - Allow provider result of 302 (winston).
 * #516642 - Add content_filter_xss() to field help (Pete B).
 * Add player-viral.swf to JW FLV Player autosearch (aaron).
 * Add $options array to emfield_emfield_field_formatter (aaron).

June 2009
---------
 * Add basic support and admin options for JW Image Rotator (aaron).
 * Fix confusing basepath for JW Flash Player variable (aaron).
 * Add basic support and admin options for JW Flash Player (aaron).

DRUPAL-6--1-2
=============

May 2009