@@ -5,6 +5,7 @@
  *  Changelog for Embedded Media Field (Drupal version 6).
  */
 
+by aaron: Document module-provided hooks.
 by aaron: Change legacy module_invoke to directly call internal funciton.
 #604524 by aaron | DamienMcKenna : Create new hook_emfield_data_alter(&$data).
 by aaron: Fix error/WSOD on admin screen if FLV Media Player module installed,
